--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springbackend?useSSL=false
-spring.datasource.username=springbackend
-spring.datasource.password=springbackend
+spring.datasource.url=jdbc:mysql://database-1.cahquos2o4oq.us-east-1.rds.amazonaws.com:3306/springbackend?useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=springworld123
 
 spring.jpa.generate-ddl=true
